# bm25comp

./: .gitignore  LICENSE  Makefile  QUICKSTART.md  README.md  SETUP.md  pyproject.toml  setup.py
.github/workflows/: release.yml  test.yml
benchmarks/: README.md  __init__.py  convert_to_benchmark_format.py  example_usage.md  generate_sample_data.py  run_benchmark.py
benchmarks/data/: .gitignore  sample.json
examples/: __init__.py  basic_usage.py  custom_tokenization.py  memory_efficiency.py  space_efficiency.py
src/bm25comp/: __init__.py  builder.py  reader.py
tests/: __init__.py  test_bm25.py  test_incremental.py  test_tokenized.py
